Fix T65397: Assigning shortcut to editor properties gives errors